target/rls/debug/build/eyre-25255df3e947a41a/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/pastra/code/rbot/target/rls/debug/build/eyre-25255df3e947a41a/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
